
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int putchar (char) ;

__attribute__((used)) static void hello(void)
{



 putchar('H');
 putchar('e');
 putchar('l');
 putchar('l');
 putchar('o');
 putchar(' ');

 putchar('w');
 putchar('o');
 putchar('r');
 putchar('l');
 putchar('d');
 putchar('.');
 putchar('\n');
}
