; ModuleID = '/home/carl/AnghaBench/git/t/t4051/extr_hello.c_hello.c'
source_filename = "/home/carl/AnghaBench/git/t/t4051/extr_hello.c_hello.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @hello to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hello() #0 {
  %1 = call i32 @putchar(i8 signext 72)
  %2 = call i32 @putchar(i8 signext 101)
  %3 = call i32 @putchar(i8 signext 108)
  %4 = call i32 @putchar(i8 signext 108)
  %5 = call i32 @putchar(i8 signext 111)
  %6 = call i32 @putchar(i8 signext 32)
  %7 = call i32 @putchar(i8 signext 119)
  %8 = call i32 @putchar(i8 signext 111)
  %9 = call i32 @putchar(i8 signext 114)
  %10 = call i32 @putchar(i8 signext 108)
  %11 = call i32 @putchar(i8 signext 100)
  %12 = call i32 @putchar(i8 signext 46)
  %13 = call i32 @putchar(i8 signext 10)
  ret void
}

declare dso_local i32 @putchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
